[project]
name = "web-server"
version = "1.0.0"
description = ""
readme = ""
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "bcrypt==5.0.0",
    "cloudscraper==1.2.71",
    "fastapi[all]==0.136.1",
    "gunicorn==26.0.0",
    "httpx==0.28.1",
    "lxml==6.1.0",
    "passlib==1.7.4",
    "pika==1.3.2",
    "psycopg2-binary==2.9.12",
    "pytest==9.0.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.20",
    "qrcode[pil]==8.2",
    "requests==2.32.3",
    "sqlalchemy==2.0.38",
    "themoviedb==1.0.2",
    "tvdb-v4-official==1.1.0",
    "uvicorn[standard]==0.37.0",
    "xmltodict==1.0.4",
]
